# smart-fit

./: database.py  main.py  models.py  pyproject.toml  readme.md
routes/: chat.py  nutrition.py  progress.py  rag_pipe.py  users.py  workout.py
